[macos] VoiceOver : Getting java.lang.IllegalArgumentException: Invalid location on Editable JComboBox

XMLWordPrintable

        I am getting the following java.lang.IllegalArgumentException: Invalid location After selecting the text and selecting the item from the editable JComboBox.

        java.lang.IllegalArgumentException: Invalid location
        at java.desktop/javax.swing.text.JTextComponent$AccessibleJTextComponent.getTextRange(JTextComponent.java:3213)
        at java.desktop/sun.lwawt.macosx.CAccessibleText$14.call(CAccessibleText.java:291)
        at java.desktop/sun.lwawt.macosx.CAccessibleText$14.call(CAccessibleText.java:283)
        at java.desktop/sun.lwawt.macosx.LWCToolkit$CallableWrapper.run(LWCToolkit.java:698)
        at java.desktop/java.awt.event.InvocationEvent.dispatch(InvocationEvent.java:308)
        at java.desktop/java.awt.EventQueue.dispatchEventImpl(EventQueue.java:773)
        at java.desktop/java.awt.EventQueue$4.run(EventQueue.java:720)
        at java.desktop/java.awt.EventQueue$4.run(EventQueue.java:714)
        at java.base/java.security.AccessController.doPrivileged(AccessController.java:399)
        at java.base/java.security.ProtectionDomain$JavaSecurityAccessImpl.doIntersectionPrivilege(ProtectionDomain.java:86)
        at java.base/java.security.ProtectionDomain$JavaSecurityAccessImpl.doIntersectionPrivilege(ProtectionDomain.java:97)
        at java.desktop/java.awt.EventQueue$5.run(EventQueue.java:747)
        at java.desktop/java.awt.EventQueue$5.run(EventQueue.java:745)
        at java.base/java.security.AccessController.doPrivileged(AccessController.java:399)
        at java.base/java.security.ProtectionDomain$JavaSecurityAccessImpl.doIntersectionPrivilege(ProtectionDomain.java:86)
        at java.desktop/java.awt.EventQueue.dispatchEvent(EventQueue.java:744)
        at java.desktop/java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:203)
        at java.desktop/java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:124)
        at java.desktop/java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:113)
        at java.desktop/java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:109)
        at java.desktop/java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:101)
        at java.desktop/java.awt.EventDispatchThread.run(EventDispatchThread.java:90)


        Step to reproduce
        ------------------------
        1) Enable VoiceOver on the mac
        2) Run the attached test
        3) Select an item from Editable JComboBox. Voice over should read the selected value.
        4) Once again select an item from the Editable JComboBox this time select the value (text) and try selecting another item from the Editable JComboBox.
        If you see the exception then the bug is reproduced.

        I have attached the screen recording for the reference.

          1. TestJComboBoxAccessibility.java
            2 kB
            Lawrence Andrews
          2. EditableJComboBoxAccessibilityException.mov
            27.75 MB
            Lawrence Andrews
          3. Screen Shot 2022-05-19 at 1.43.05 PM.png
            85 kB
            Lawrence Andrews

              Assignee:
              Alexander Zuev
              Reporter:
              Lawrence Andrews
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: