8284690: [macos] VoiceOver : Getting java.lang.IllegalArgumentException: Invalid location on Editable JComboBox

Moving cache invalidation from the clearCache method to a createRowWithIndex method
eliminating race condition that causes crash. Now clearCache just nitifies that cache
is invalid and should be regenerated next time it is being accessed.